# ecs-flask-cicd

./: Dockerfile  README.md  pyproject.toml  task-definition.json
.github/workflows/: cd.yaml  cd_prod.yaml  cd_test.yaml  ci.yaml
app/: main.py
tests/: test_main.py
