[tool.poetry]
name = "ecs-terraform"
version = "0.1.0"
description = ""
authors = ["Scott Page <spage@dropbox.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.961"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[tool.black]
# Setting line length to match Github's PR viewer
line-length = 119
exclude = '''
/(
    \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
)/
'''
target-version = ['py39']

[tool.isort]
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#isort
profile = "black"
line_length = 119

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
console_output_style = "classic"
addopts = "--verbose --cov-report=term-missing --cov-fail-under=10"
log_cli = false
log_cli_level = "INFO"
log_cli_format = "[%(levelname)s] %(message)s"
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
